# luminate-ai

./: .cursorrules  .gitignore  02_ingest_oer.py  Agent001.md  DEVELOPMENT_PLAN.md  GEMINI.md  HANDOVER.md  PROJECT_STATUS.md  README.md  README.txt  README_additional.txt  SCAFFOLDING_GUIDE.md  SETUP.md  chunks.jsonl  clean_neo4j.sh  clickhouse-config.xml  docker-compose.yml  embed_docs.py  env  exports_1764830921358-lf-traces-export-cmid0hfv60009p707349rk0i1.json  exports_1764835937854-lf-traces-export-cmid0hfv60009p707349rk0i1.json  fastapi_app.py  gemini-models.md  index.js  ingest_comp237_content.py  ingest_summary.json  init_db.py  load_sample_data.py  main.py  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  session-session-1764828671590-22vagl9.json  setup.py  test_db.py  test_full_system.py  test_quiz_feedback.py  verify_backend_full.py  verify_backend_memory.py  (+1 more)
backend/: .gitignore  OBSERVABILITY_ENHANCEMENT_SUMMARY.md  assess_course_data_quality.py  debug_direct.py  ingest_cleaned_data.py  ingest_comp237_proper.py  load_neo4j_graph.py  main.py  pyproject.toml  requirements.txt  run_etl.py  seed_prompts.py  seed_test_data.py  test_auth.py  trace-3719911d19cd2f649a320be91a7f8285.json  verify_rag.py  verify_system_health.py
backend/app/: __init__.py  config.py  redis_client.py
backend/cleaned_data/: CHROMADB_STATUS.md  DATA_INVENTORY_SUMMARY.md  blackboard_mappings.json  media_inventory.json
backend/remodel/: 01_ARCHITECTURE_ANALYSIS.md  02_PROMPT_ENGINEERING_OVERHAUL.md  03_CONVERSATION_AWARE_PROMPTING.md  04_SOURCE_METADATA_FIX.md  (+6 more)
(+1157 files in other folders)
